--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "firebase:deploy": "npm run build firebase deploy"
+    "fire:deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "firebase": "^9.22.0",
