--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "fire:deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@react-three/drei": "^9.74.11",
+    "@react-three/fiber": "^8.13.2",
     "firebase": "^9.22.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-tsparticles": "^2.9.3",
+    "three": "^0.153.0",
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
