--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
     "react-tsparticles": "^2.9.3",
     "three": "^0.153.0",
-    "tsparticles": "^2.9.3"
+    "tsparticles": "^2.9.3",
+    "typescript-plugin-css-modules": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
