--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["App.tsx", "src/**/*"],
   "exclude": ["node_modules"]
 }
