--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-three/drei": "^9.74.11",
     "@react-three/fiber": "^8.13.2",
     "firebase": "^9.22.0",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tsparticles": "^2.9.3",
@@ -26,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.152.1",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
