--- a/package.json
+++ b/package.json
@@ -4,19 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": ""
   },
   "dependencies": {
-    "firebase": "^10.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react-dom": "^18.2.14",
-    "@vitejs/plugin-react": "^4.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "firebase": "^10.5.0"
   }
 }
