build and deploy setup with parcel

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": ""
+    "start": "parcel public/index.html",
+    "build": "rm -f dist/index.* && parcel build public/index.html --dist-dir dist",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
-    "firebase": "^10.5.0"
+    "firebase": "^10.5.0",
+    "parcel": "^2.10.0"
   }
 }
