--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "sarava338",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "clean": "rm -rf .firebase .parcel-cache dist/index.*",
-    "build": "parcel build public/index.html --dist-dir dist"
+    "dev": "webpack serve",
+    "build": "webpack"
   },
   "dependencies": {
     "firebase": "^10.5.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack-dev-server": "^4.15.1"
   }
 }
