--- a/package.json
+++ b/package.json
@@ -2,23 +2,19 @@
   "name": "sarava338",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack"
-  },
-  "dependencies": {
-    "firebase": "^10.5.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.2",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
+    "@types/node": "^20.10.0",
     "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "webpack-dev-server": "^4.15.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "firebase": "^10.6.0"
   }
 }
